# CSparseAndndroid

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vaca/sparse/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  vaca.cpp
app/src/main/java/com/vaca/sparse/: MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vaca/sparse/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
